tests/errors/sem.expected-constant.dot-access-type.or
main :: () -> void {
    foo_t := int;

    foo_t.Y;
};
